nenolod     2006/07/02 05:10:39 UTC	(20060702-5658)
  Log:
  - header/footer should be present on help `functions'
  

  Changes:	Modified:
  +6 -0		trunk/src/help.c (File Modified) 


nenolod     2006/07/02 05:09:02 UTC	(20060702-5656)
  Log:
  - handle command_(add|delete)_many() a bit more sanely
  

  Changes:	Modified:
  +6 -6		trunk/src/commandtree.c (File Modified) 


nenolod     2006/07/02 05:05:34 UTC	(20060702-5654)
  Log:
  - HELP SET
  

  Changes:	Modified:
  +0 -35	trunk/modules/nickserv/help.c (File Modified) 
  +16 -0	trunk/modules/nickserv/set.c (File Modified) 


nenolod     2006/07/02 04:38:41 UTC	(20060702-5652)
  Log:
  - ditto for userserv
  

  Changes:	Modified:
  +211 -275	trunk/modules/userserv/set.c (File Modified) 


nenolod     2006/07/02 04:28:25 UTC	(20060702-5650)
  Log:
  - change multiple string entities to single strings.
  - remove redundant account lookups (we already had this information)
  - remove a lot of other redundant shit
  - remove use of set_command_, use command_t's instead.
  

  Changes:	Modified:
  +150 -227	trunk/modules/nickserv/set.c (File Modified) 


nenolod     2006/07/02 04:21:38 UTC	(20060702-5648)
  Log:
  - add command_delete_many().
  

  Changes:	Modified:
  +1 -0		trunk/include/commandtree.h (File Modified) 
  +22 -1	trunk/src/commandtree.c (File Modified) 


jilles      2006/07/02 01:38:39 UTC	(20060702-5646)
  Log:
  - remove last mention of unreal from example.conf
  - remove unreal protocol module include file
  - mark PROTOCOL_UNREAL constant obsolete
  

  Changes:	Modified:
  +1 -1		trunk/dist/example.conf (File Modified) 
  +1 -1		trunk/dist/example.userserv.conf (File Modified) 
  +1 -1		trunk/include/pmodule.h (File Modified) 
  +0 -35	trunk/include/protocol/unreal.h (File Deleted) 


jilles      2006/07/02 01:32:36 UTC	(20060702-5644)
  Log:
  Comment changes to users.h: don't mention which ircds use vhost. Add some other explanation.
  

  Changes:	Modified: